--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,11 @@ body {
   background: #dfe7ef;
   font-family: "Bitter", serif;
 }
+
 * {
   box-sizing: border-box;
 }
+
 .icon {
   display: inline-block;
   width: 1em;
@@ -13,6 +15,7 @@ body {
   stroke: currentColor;
   fill: currentColor;
 }
+
 .wrapper {
   width: 100%;
   display: flex;
@@ -25,8 +28,9 @@ body {
   .wrapper {
     flex-wrap: wrap;
     flex-direction: column;
- }
+  }
 }
+
 .player {
   background: #eef3f7;
   width: 410px;
@@ -43,7 +47,7 @@ body {
     min-height: initial;
     padding-bottom: 30px;
     max-width: 400px;
- }
+  }
 }
 .player__top {
   display: flex;
@@ -54,7 +58,7 @@ body {
 @media screen and (max-width: 576px), (max-height: 500px) {
   .player__top {
     flex-wrap: wrap;
- }
+  }
 }
 .player-cover {
   width: 300px;
@@ -74,7 +78,7 @@ body {
     height: 230px;
     margin-left: auto;
     margin-right: auto;
- }
+  }
 }
 .player-cover__item {
   background-repeat: no-repeat;
@@ -135,7 +139,7 @@ body {
     padding-left: 0;
     width: 100%;
     flex: unset;
- }
+  }
 }
 .player-controls__item {
   display: inline-flex;
@@ -161,7 +165,7 @@ body {
     width: 40px;
     height: 40px;
     margin-bottom: 0;
- }
+  }
 }
 .player-controls__item::before {
   content: "";
@@ -179,20 +183,20 @@ body {
 @media screen and (min-width: 500px) {
   .player-controls__item:hover {
     color: #532ab9;
- }
+  }
   .player-controls__item:hover::before {
     opacity: 1;
     transform: scale(1.3);
- }
+  }
 }
 @media screen and (max-width: 576px), (max-height: 500px) {
   .player-controls__item:active {
     color: #532ab9;
- }
+  }
   .player-controls__item:active::before {
     opacity: 1;
     transform: scale(1.3);
- }
+  }
 }
 .player-controls__item .icon {
   position: relative;
@@ -212,7 +216,7 @@ body {
     margin-left: auto;
     font-size: 75px;
     margin-right: 0;
- }
+  }
 }
 .player-controls__item.-xl:before {
   display: none;
@@ -220,12 +224,15 @@ body {
 .player-controls__item.-favorite.active {
   color: red;
 }
+
 [v-cloak] {
   display: none;
 }
+
 [v-cloak] > * {
   display: none;
 }
+
 .progress {
   width: 100%;
   margin-top: -15px;
@@ -249,6 +256,7 @@ body {
   font-size: 16px;
   opacity: 0.7;
 }
+
 .progress__bar {
   height: 6px;
   width: 100%;
@@ -257,12 +265,14 @@ body {
   display: inline-block;
   border-radius: 10px;
 }
+
 .progress__current {
   height: inherit;
   width: 0%;
   background-color: #a3b3ce;
   border-radius: 10px;
 }
+
 .album-info {
   color: #71829e;
   flex: 1;
@@ -272,7 +282,7 @@ body {
 @media screen and (max-width: 576px), (max-height: 500px) {
   .album-info {
     padding-right: 30px;
- }
+  }
 }
 .album-info__name {
   font-size: 20px;
@@ -284,7 +294,7 @@ body {
   .album-info__name {
     font-size: 18px;
     margin-bottom: 9px;
- }
+  }
 }
 .album-info__track {
   font-weight: 400;
@@ -297,8 +307,9 @@ body {
   .album-info__track {
     font-size: 18px;
     min-height: 50px;
- }
+  }
 }
+
 .github-btn {
   position: absolute;
   right: 40px;
@@ -318,7 +329,7 @@ body {
   .github-btn:hover {
     transform: scale(1.1);
     box-shadow: 0px 17px 20px -6px rgba(36, 52, 70, 0.36);
- }
+  }
 }
 @media screen and (max-width: 700px) {
   .github-btn {
@@ -326,41 +337,51 @@ body {
     bottom: auto;
     right: auto;
     margin-top: 20px;
- }
+  }
   .github-btn:active {
     transform: scale(1.1);
     box-shadow: 0px 17px 20px -6px rgba(36, 52, 70, 0.36);
- }
+  }
 }
+
 .scale-out-enter-active {
   transition: all 0.35s ease-in-out;
 }
+
 .scale-out-leave-active {
   transition: all 0.35s ease-in-out;
 }
+
 .scale-out-enter {
   transform: scale(0.55);
   pointer-events: none;
   opacity: 0;
 }
+
 .scale-out-leave-to {
   transform: scale(1.2);
   pointer-events: none;
   opacity: 0;
 }
+
 .scale-in-enter-active {
   transition: all 0.35s ease-in-out;
 }
+
 .scale-in-leave-active {
   transition: all 0.35s ease-in-out;
 }
+
 .scale-in-enter {
   transform: scale(1.2);
   pointer-events: none;
   opacity: 0;
 }
+
 .scale-in-leave-to {
   transform: scale(0.55);
   pointer-events: none;
   opacity: 0;
 }
+
+/*# sourceMappingURL=main.css.map */
